copr-hypervisor: allow copr people to ssh there?

--- a/inventory/host_vars/vmhost-x86-copr01.rdu-cc.fedoraproject.org
+++ b/inventory/host_vars/vmhost-x86-copr01.rdu-cc.fedoraproject.org
@@ -1,4 +1,6 @@
 ---
+fas_client_groups: sysadmin-copr,sysadmin-main
+sudoers: "{{ private }}/files/sudo/copr-sudoers"
 nrpe_procs_warn: 900
 nrpe_procs_crit: 1000
 br0_ip: 8.43.85.57
