db01: backup resultsdb
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/db01.iad2.fedoraproject.org
+++ b/inventory/host_vars/db01.iad2.fedoraproject.org
@@ -31,6 +31,7 @@ databases:
 - tahrir
 - waiverdb
 - transtats
+- resultsdb
 
 # This is a more strict list of databases to backup every day
 dbs_to_backup:
@@ -53,6 +54,7 @@ dbs_to_backup:
 - tahrir
 - waiverdb
 - transtats
+- resultsdb
 
 # These are normally group variables, but in this case db servers are often different
 lvm_size: 500000
