--- a/inventory/host_vars/db01.iad2.fedoraproject.org
+++ b/inventory/host_vars/db01.iad2.fedoraproject.org
@@ -32,6 +32,7 @@ databases:
 - waiverdb
 - transtats
 - resultsdb
+- zezere
 
 # This is a more strict list of databases to backup every day
 dbs_to_backup:
@@ -55,6 +56,7 @@ dbs_to_backup:
 - waiverdb
 - transtats
 - resultsdb
+- zezere
 
 # These are normally group variables, but in this case db servers are often different
 lvm_size: 500000
