nuancier: set wsgi vars for httpd role.
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/nuancier01.iad2.fedoraproject.org
+++ b/inventory/host_vars/nuancier01.iad2.fedoraproject.org
@@ -10,3 +10,6 @@ volgroup: /dev/vg_guests
 eth0_ip: 10.3.163.99
 vmhost: vmhost-x86-04.iad2.fedoraproject.org
 datacenter: iad2
+
+wsgi_procs: 2
+wsgi_threads: 2
