--- a/inventory/host_vars/nuancier02.iad2.fedoraproject.org
+++ b/inventory/host_vars/nuancier02.iad2.fedoraproject.org
@@ -10,3 +10,6 @@ volgroup: /dev/vg_guests
 eth0_ip: 10.3.163.100
 vmhost: vmhost-x86-01.iad2.fedoraproject.org
 datacenter: iad2
+
+wsgi_procs: 2
+wsgi_threads: 2
