nuancier: open port 80
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/nuancier01.iad2.fedoraproject.org
+++ b/inventory/host_vars/nuancier01.iad2.fedoraproject.org
@@ -13,3 +13,8 @@ datacenter: iad2
 
 wsgi_procs: 2
 wsgi_threads: 2
+
+tcp_ports: [ 80 ]
+
+fas_client_groups: sysadmin-noc,sysadmin-datanommer,sysadmin-veteran
+
