Try to use the linux-system-roles in ansible for ips

--- a/inventory/host_vars/vmhost-x86-copr02.rdu-cc.fedoraproject.org
+++ b/inventory/host_vars/vmhost-x86-copr02.rdu-cc.fedoraproject.org
@@ -3,16 +3,53 @@ fas_client_groups: sysadmin-copr,sysadmin-main
 sudoers: "{{ private }}/files/sudo/copr-sudoers"
 nrpe_procs_warn: 900
 nrpe_procs_crit: 1000
-br0_ip: 8.43.85.58
-br0_nm: 255.255.254.0
 gw: 8.43.85.254
 dns: 8.8.8.8
 
+has_ipv4: yes
+br0_ipv4: 8.43.85.58
+br0_ipv4_nm: 255.255.254.0
+br0_ipv4_gw: {{ gw }}
+
 has_ipv6: yes
-eth0_ipv6: "2620:52:3:1:dead:beef:cafe:c002"
-eth0_ipv6_gw: "2620:52:3:1:ffff:ffff:ffff:fffe"
+br0_ipv6: "2620:52:3:1:dead:beef:cafe:c002"
+br0_ipv6_gw: "2620:52:3:1:ffff:ffff:ffff:fffe"
 
 datacenter: rdu-cc
 vpn: false
 postfix_group: cloud
 freezes: false
+
+mac0: "f4:02:70:d0:04:5e"
+mac1: "b4:96:91:63:3b:9c"
+mac2: "f4:02:70:d0:04:5f"
+mac3: "b4:96:91:63:3b:9d"
+mac4: "b4:96:91:63:3b:9e"
+mac5: "b4:96:91:63:3b:9f"
+
+network_connections:
+  - name: br0
+    state: up
+    type: bridge
+    autoconnect: yes
+    ip:
+      address: 
+      - "{{ br0_ipv4 }}/24"
+      - "{{ br0_ipv6 }}/64"
+      gateway4: "{{ br0_ipv4_gw }}"
+      gateway6: "{{ br0_ipv6_gw }}"
+      dns: 
+      - 8.8.8.8
+      - 8.8.4.4
+      - 2001:4860:4860::8888
+      dns_search: 
+      - fedoraproject.org
+      - vpn.fedoraproject.org
+      - rdu-cc.fedoraproject.org
+      dhcp4: no
+      auto6: no
+  - name: br0-port0
+    state: up
+    type: ethernet
+    master: br0
+    mac: "{{ br0_port0_mac }}"
