--- a/inventory/host_vars/vmhost-x86-06.rdu-cc.fedoraproject.org
+++ b/inventory/host_vars/vmhost-x86-06.rdu-cc.fedoraproject.org
@@ -1,12 +1,56 @@
 ---
+datacenter: rdu-cc
+
 nrpe_procs_warn: 900
 nrpe_procs_crit: 1000
-br0_ip: 8.43.85.85
-br0_nm: 255.255.254.0
-gw: 8.43.85.254
-dns: 8.8.8.8
 
-datacenter: rdu-cc
 vpn: true
 postfix_group: cloud
 freezes: false
+
+gw: 8.43.85.254
+dns: 8.8.8.8
+
+has_ipv4: yes
+br0_ipv4: 8.43.85.85
+br0_ipv4_nm: 23
+br0_ipv4_gw: "{{ gw }}"
+
+has_ipv6: yes
+br0_ipv6: "2620:52:3:1:dead:beef:cafe:f006"
+br0_ipv6_nm: 64
+br0_ipv6_gw: "2620:52:3:1:ffff:ffff:ffff:fffe"
+
+mac0: "ec:f4:bb:cd:aa:a4"
+mac1: "ec:f4:bb:cd:aa:a5"
+mac2: "ec:f4:bb:cd:aa:a0"
+mac3: "ec:f4:bb:cd:aa:a2"
+
+br0_port0_mac: "{{ mac0 }}"
+
+network_connections:
+  - name: br0
+    state: up
+    type: bridge
+    autoconnect: yes
+    ip:
+      address: 
+      - "{{ br0_ipv4 }}/{{ br0_ipv4_nm }}"
+      - "{{ br0_ipv6 }}/{{ br0_ipv6_nm }}"
+      gateway4: "{{ br0_ipv4_gw }}"
+      gateway6: "{{ br0_ipv6_gw }}"
+      dns: 
+      - 8.8.8.8
+      - 8.8.4.4
+      - 2001:4860:4860::8888
+      dns_search: 
+      - fedoraproject.org
+      - vpn.fedoraproject.org
+      - rdu-cc.fedoraproject.org
+      dhcp4: no
+      auto6: no
+  - name: br0-port0
+    state: up
+    type: ethernet
+    master: br0
+    mac: "{{ br0_port0_mac }}"
