--- a/inventory/host_vars/copr-db-stg.aws.fedoraproject.org
+++ b/inventory/host_vars/copr-db-stg.aws.fedoraproject.org
@@ -1,5 +1,5 @@
 ---
-ansible_user=ec2-user
+ansible_user: ec2-user
 datacenter: aws
 inventory_hostname: "copr-db-stg.aws.fedoraproject.org"
 inventory_instance_name: copr-db-stg
