--- a/inventory/host_vars/cloud-noc-os01.rdu-cc.fedoraproject.org
+++ b/inventory/host_vars/cloud-noc-os01.rdu-cc.fedoraproject.org
@@ -1,4 +1,5 @@
 ---
+fas_client_groups: sysadmin-main
 freezes: false
 
 datacenter: rdu-cc
@@ -8,12 +9,11 @@ mem_size: 8192
 num_cpus: 4
 lvm_size: 20000
 
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 
 ks_url: http://infrastructure.fedoraproject.org/repo/rhel/ks/kvm-rhel-8-ext
 ks_repo: http://infrastructure.fedoraproject.org/repo/rhel/RHEL8-x86_64/
-
-dns1: 8.8.8.8
-dns2: 8.8.4.4
 
 has_ipv4: yes
 eth0_ipv4: 8.43.85.49
@@ -23,7 +23,10 @@ eth1_ipv4: 172.29.160.2
 eth1_ipv4_nm: 24
 
 mac0: 52:54:00:46:ed:ba
+mac_address: "{{ mac0 }}"
 mac1: 52:54:00:24:8e:bc
+mac_address1: "{{ mac0 }}"
+public_hostname: cloud-noc-os01.rdu-cc.fedoraproject.org
 
 network_connections:
   - name: eth0
