fix the volume group for the host. Problem with building without kickstats is that volume names are set to odd things.

--- a/inventory/host_vars/cloud-noc-os01.rdu-cc.fedoraproject.org
+++ b/inventory/host_vars/cloud-noc-os01.rdu-cc.fedoraproject.org
@@ -4,7 +4,7 @@ freezes: false
 
 datacenter: rdu-cc
 vmhost: vmhost-x86-cc05.rdu-cc.fedoraproject.org
-volgroup: /dev/vg_guests
+volgroup: /dev/rhel_vmhost-x86-05
 mem_size: 8192
 num_cpus: 4
 lvm_size: 20000
