--- a/inventory/host_vars/cloud-noc-os01.rdu-cc.fedoraproject.org
+++ b/inventory/host_vars/cloud-noc-os01.rdu-cc.fedoraproject.org
@@ -11,7 +11,9 @@ lvm_size: 20000
 
 dns1: 8.8.8.8
 dns2: 8.8.4.4
+dns: "{{dns1}}"
 
+virt_install_command: "{{ virt_install_command_two_nic }}"
 ks_url: http://infrastructure.fedoraproject.org/repo/rhel/ks/kvm-rhel-8-ext
 ks_repo: http://infrastructure.fedoraproject.org/repo/rhel/RHEL8-x86_64/
 
