--- a/inventory/host_vars/buildhw-x86-01.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-01.iad2.fedoraproject.org
@@ -1,8 +1,32 @@
 ---
-eth0_ip: 10.3.169.31
-gw: 10.3.169.254
 datacenter: iad2
-eth1_off: true
+dns1: 10.3.163.33
+ 
+has_ipv4: yes
+eth0_ipv4: 10.3.169.31
+eth0_ipv4_nm: 24
+eth0_ipv4_gw: 10.3.169.254
+ 
+has_ipv6: no
+ 
+mac0: 14:9e:cf:61:9e:61
+mac1: 14:9e:cf:61:9e:64 
 
-nm: 255.255.255.0
-dns: 10.3.163.33
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    state: up
+    type: ethernet
+    autoconnect: yes
+    ip:
+      address: 
+      - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+      gateway4: "{{ eth0_ipv4_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      dhcp4: no
+      auto6: no
+  - name: eth1
+    mac: "{{ mac1 }}"
+    state: down
+    type: ethernet
