--- a/inventory/host_vars/proxy11.fedoraproject.org
+++ b/inventory/host_vars/proxy11.fedoraproject.org
@@ -1,26 +1,57 @@
 ---
-nm: 255.255.255.248
-gw: 67.219.144.65
-dns: 8.8.8.8
 num_cpus: 10
-dns1: 8.8.8.8
-dns2: 8.8.4.4
+freezes: false
 
-ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
-ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
+datacenter: dedicatedsolutions
+
+# This is consumed by the roles/fedora-web/main role
+sponsor: dedicatedsolutions
 
 vmhost: dedicatedsolutions01.fedoraproject.org
 volgroup: /dev/vg_virthost
 
-eth0_ip: 67.219.144.68
-eth0_nm: 255.255.255.240
+ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
+ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
+
+dns1: 8.8.8.8
+dns2: 8.8.4.4
+
+dns_search1: "vpn.fedoraproject.org"
+dns_search2: "fedoraproject.org"
+
+has_ipv4: yes
+eth0_ipv4: 67.219.144.68
+eth0_ipv4_nm: 28
+eth0_ipv4_gw: 67.219.144.65
+
 has_ipv6: yes
 eth0_ipv6: "2604:1580:fe00:0:dead:beef:cafe:fed1"
+eth0_ipv6_nm: 64
 eth0_ipv6_gw: "2604:1580:fe00::1"
 
-# This is consumed by the roles/fedora-web/main role
-sponsor: dedicatedsolutions
-datacenter: dedicatedsolutions
+mac0: 52:54:00:96:fb:f7
+
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    state: up
+    type: ethernet
+    autoconnect: yes
+    ip:
+      address: 
+      - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+      - "{{ eth0_ipv6 }}/{{ eth0_ipv6_nm }}"      
+      gateway4: "{{ eth0_ipv4_gw }}"
+      gateway6: "{{ eth0_ipv6_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      - "{{ dns2 }}"
+      dns_search:
+      - "{{ dns_search1 }}" 
+      - "{{ dns_search2 }}" 
+      dhcp4: no
+      auto6: no
+  
 postfix_group: vpn
 vpn: true
 
