--- a/inventory/host_vars/proxy04.fedoraproject.org
+++ b/inventory/host_vars/proxy04.fedoraproject.org
@@ -1,31 +1,63 @@
 ---
-nm: 255.255.255.128
-gw: 152.19.134.129
-dns: 8.8.8.8
+freezes: true
 
-ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
-ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
-
-vmhost: ibiblio01.fedoraproject.org
-volgroup: /dev/vg_guests
-
-eth0_ip: 152.19.134.142
-eth0_nm: 255.255.255.128
-has_ipv6: yes
-eth0_ipv6: "2610:28:3090:3001:dead:beef:cafe:fed3"
-eth0_ipv6_gw: "2610:28:3090:3001::1"
-dns1: 8.8.8.8
-dns2: 8.8.4.4
+datacenter: ibiblio
 
 # This is consumed by the roles/fedora-web/main role
 sponsor: ibiblio
-datacenter: ibiblio
-postfix_group: vpn
-
-nrpe_procs_warn: 1200
-nrpe_procs_crit: 1400
+ 
+vmhost: ibiblio01.fedoraproject.org
+volgroup: /dev/vg_guests
 
 mem_size: 16384
 max_mem_size: 20000
 num_cpus: 8
+
+ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
+ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
+
+dns1: 8.8.8.8
+dns2: 8.8.4.4
+
+dns_search1: "vpn.fedoraproject.org"
+dns_search2: "fedoraproject.org"
+
+has_ipv4: yes
+eth0_ipv4: 152.19.134.142
+eth0_ipv4_nm: 25
+eth0_ipv4_gw: 152.19.134.129
+
+has_ipv6: yes
+eth0_ipv6: "2610:28:3090:3001:dead:beef:cafe:fed3"
+eth0_ipv6_nm: 64
+eth0_ipv6_gw: "2610:28:3090:3001::1"
+dns1: 8.8.8.8
+dns2: 8.8.4.4
+mac0: 52:54:00:e3:bb:8f
+
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    state: up
+    type: ethernet
+    autoconnect: yes
+    ip:
+      address: 
+      - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+      - "{{ eth0_ipv6 }}/{{ eth0_ipv6_nm }}"      
+      gateway4: "{{ eth0_ipv4_gw }}"
+      gateway6: "{{ eth0_ipv6_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      - "{{ dns2 }}"
+      dns_search:
+      - "{{ dns_search1 }}" 
+      - "{{ dns_search2 }}" 
+      dhcp4: no
+      auto6: no
+
+postfix_group: vpn
 vpn: true
+
+nrpe_procs_warn: 1200
+nrpe_procs_crit: 1400
