--- a/inventory/host_vars/proxy14.fedoraproject.org
+++ b/inventory/host_vars/proxy14.fedoraproject.org
@@ -1,31 +1,62 @@
 ---
-nm: 255.255.255.0
-gw: 8.43.85.254
-dns: 8.8.8.8
-dns1: 8.8.8.8
-dns2: 8.8.4.4
+freezes: true
 
-ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
-ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
+datacenter: rdu-cc
+
+# This is consumed by the roles/fedora-web/main role
+sponsor: redhat
 
 vmhost: virthost-cc-rdu01.fedoraproject.org
 volgroup: /dev/vg_guests
 
-eth0_ip: 8.43.85.67
-eth0_nm: 255.255.255.0
-has_ipv6: true
-eth0_ipv6: "2620:52:3:1:dead:beef:cafe:fed7"
-eth0_ipv6_gw: "2620:52:3:1:ffff:ffff:ffff:fffe"
+mem_size: 16384
+max_mem_size: 32768
+num_cpus: 8
 
-# This is consumed by the roles/fedora-web/main role
-sponsor: redhat
-datacenter: rdu-cc
+ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
+ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
+
+dns1: 8.8.8.8
+dns2: 8.8.4.4
+
+dns_search1: "vpn.fedoraproject.org"
+dns_search2: "fedoraproject.org"
+
+has_ipv4: yes
+eth0_ipv4: 8.43.85.67
+eth0_ipv4_nm: 24
+eth0_ipv4_gw: 8.43.85.254
+
+has_ipv6: yes
+ eth0_ipv6: "2620:52:3:1:dead:beef:cafe:fed7"
+ eth0_ipv6_nm: 64
+ eth0_ipv6_gw: "2620:52:3:1:ffff:ffff:ffff:fffe"
+
+mac0: 52:54:00:19:67:0C
+
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    state: up
+    type: ethernet
+    autoconnect: yes
+    ip:
+      address: 
+      - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+      - "{{ eth0_ipv6 }}/{{ eth0_ipv6_nm }}"      
+      gateway4: "{{ eth0_ipv4_gw }}"
+      gateway6: "{{ eth0_ipv6_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      - "{{ dns2 }}"
+      dns_search:
+      - "{{ dns_search1 }}" 
+      - "{{ dns_search2 }}" 
+      dhcp4: no
+      auto6: no
+
 postfix_group: vpn
 vpn: true
 
 nrpe_procs_warn: 1200
 nrpe_procs_crit: 1400
-
-mem_size: 16384
-max_mem_size: 32768
-num_cpus: 8
