--- a/roles/openshift-apps/languages/templates/cron.yml
+++ b/roles/openshift-apps/languages/templates/cron.yml
@@ -32,7 +32,7 @@ spec:
           volumes:
           - name: srpm-data
             persistentVolumeClaim:
-              claimName: "{{ app }}-storage"
+              claimName: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
           restartPolicy: Never
 ---
 {% endif %}
@@ -69,7 +69,7 @@ spec:
           volumes:
           - name: srpm-data
             persistentVolumeClaim:
-              claimName: "{{ app }}-storage"
+              claimName: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
           restartPolicy: Never
 ---
 {% if env == "production" %}
@@ -94,7 +94,7 @@ spec:
           volumes:
           - name: srpm-data
             persistentVolumeClaim:
-              claimName: "{{ app }}-storage"
+              claimName: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
           restartPolicy: Never
           containers:
           - name: stats
@@ -134,7 +134,7 @@ spec:
           volumes:
           - name: srpm-data
             persistentVolumeClaim:
-              claimName: "{{ app }}-storage"
+              claimName: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
           restartPolicy: Never
           containers:
           - name: stats
@@ -173,7 +173,7 @@ spec:
           volumes:
           - name: srpm-data
             persistentVolumeClaim:
-              claimName: "{{ app }}-storage"
+              claimName: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
           restartPolicy: Never
           containers:
           - name: stats
@@ -226,4 +226,4 @@ spec:
           volumes:
           - name: nginx-data
             persistentVolumeClaim:
-              claimName: "{{ app }}-storage"
+              claimName: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
