--- a/roles/openshift-apps/languages/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/languages/templates/deploymentconfig.yml
@@ -34,6 +34,6 @@ spec:
       volumes:
       - name: nginx-data
         persistentVolumeClaim:
-          claimName: "{{ app }}-storage"
+          claimName: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
       restartPolicy: Always
 
