--- a/roles/openshift-apps/languages/templates/pvc.yml
+++ b/roles/openshift-apps/languages/templates/pvc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ app }}-storage"
+  name: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
 spec:
   accessModes:
     - ReadWriteMany
@@ -13,3 +13,4 @@ spec:
       storage: 70Gi
 {%    endif %}
   storageClassName: ""
+  volumeName: "languages-storage{{ '-stg' if env == 'staging' else '' }}"
