--- a/roles/openshift-apps/languages/templates/cron.yml
+++ b/roles/openshift-apps/languages/templates/cron.yml
@@ -19,7 +19,7 @@ spec:
         spec:
           containers:
           - name: extract
-            image: "{{ registry }}/{{ app }}/builder:f33"
+            image: "docker-registry.default.svc:5000/languages/builder:f33"
             imagePullPolicy: Always
             command:
             - ./build.py
@@ -56,7 +56,7 @@ spec:
         spec:
           containers:
           - name: extract
-            image: "{{ registry }}/{{ app }}/builder:latest"
+            image: "docker-registry.default.svc:5000/languages/builder:latest"
             imagePullPolicy: Always
             command:
             - ./build.py
@@ -98,7 +98,7 @@ spec:
           restartPolicy: Never
           containers:
           - name: stats
-            image: "{{ registry }}/{{ app }}/builder:latest"
+            image: "docker-registry.default.svc:5000/languages/builder:latest"
             imagePullPolicy: Always
             command: ["/bin/sh", "-c"]
             args:
@@ -138,7 +138,7 @@ spec:
           restartPolicy: Never
           containers:
           - name: stats
-            image: "{{ registry }}/{{ app }}/builder:latest"
+            image: "docker-registry.default.svc:5000/languages/builder:latest"
             imagePullPolicy: Always
             command: ["/bin/sh", "-c"]
             args:
@@ -177,7 +177,7 @@ spec:
           restartPolicy: Never
           containers:
           - name: stats
-            image: "{{ registry }}/{{ app }}/builder:latest"
+            image: "docker-registry.default.svc:5000/languages/builder:latest"
             imagePullPolicy: Always
             command: ["/bin/sh", "-c"]
             args:
