--- a/inventory/host_vars/buildhw-x86-15.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-15.iad2.fedoraproject.org
@@ -1,8 +1,38 @@
 ---
-eth0_ip: 10.3.169.45
-gw: 10.3.169.254
 datacenter: iad2
-eth1_off: true
+dns1: 10.3.163.33
+dns2: 10.3.163.34
+ 
+has_ipv4: yes
+eth0_ipv4: 10.3.169.45
+eth0_ipv4_nm: 24
+eth0_ipv4_gw: 10.3.169.254
 
-nm: 255.255.255.0
-dns: 10.3.163.33
+has_ipv6: no
+ 
+mac0: f8:ca:b8:f7:26:fb
+mac1: f8:ca:b8:f7:26:fe
+
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    state: down
+    type: ethernet
+    ip:
+      address: 
+      - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+      gateway4: "{{ eth0_ipv4_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      - "{{ dns2 }}"
+      dns_search: 
+      - iad2.fedoraproject.org
+      - fedoraproject.org
+      dhcp4: no
+      auto6: no
+
+  - name: eth1
+    mac: "{{ mac1 }}"
+    state: down
+    type: ethernet
+    autoconnect: yes
