--- a/inventory/host_vars/buildhw-a64-02.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-a64-02.iad2.fedoraproject.org
@@ -1,5 +1,45 @@
 ---
-gw: 10.3.170.254
-eth1_ip: 10.3.170.122
-eth1_ipv4_gw: 10.3.170.254
 datacenter: iad2
+dns1: 10.3.163.33
+dns2: 10.3.163.34
+ 
+has_ipv4: yes
+eth1_ipv4: 10.3.170.122
+eth1_ipv4_nm: 24
+eth1_ipv4_gw: 10.3.170.254
+ 
+has_ipv6: no
+ 
+mac0: 00:1b:21:de:34:63
+mac1: 50:6b:4b:6a:ec:90 
+mac2: 50:6b:4b:6a:ec:91
+
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    state: down
+    type: ethernet
+    
+  - name: eth1
+    mac: "{{ mac1 }}"
+    state: up
+    type: ethernet
+    autoconnect: yes
+    ip:
+      address: 
+      - "{{ eth1_ipv4 }}/{{ eth1_ipv4_nm }}"
+      gateway4: "{{ eth1_ipv4_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      - "{{ dns2 }}"
+      dns_search: 
+      - iad2.fedoraproject.org
+      - fedoraproject.org
+      dhcp4: no
+      auto6: no
+  
+  - name: eth2
+    mac: "{{ mac2 }}"
+    state: down
+    type: ethernet   
+  
