--- a/inventory/host_vars/buildhw-a64-11.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-a64-11.iad2.fedoraproject.org
@@ -1,5 +1,50 @@
 ---
-gw: 10.3.170.254
-eth0_ip: 10.3.170.131
-eth0_ipv4_gw: 10.3.170.254
 datacenter: iad2
+dns1: 10.3.163.33
+dns2: 10.3.163.34
+ 
+has_ipv4: yes
+eth0_ipv4: 10.3.170.131
+eth0_ipv4_nm: 24
+eth0_ipv4_gw: 10.3.170.254
+
+has_ipv6: no
+ 
+mac0: 00:01:73:02:08:ff
+mac1: 72:a3:68:ad:39:05
+mac2: 8a:93:68:8d:ca:cd
+mac3: ee:ef:b7:b9:28:8a
+
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    state: down
+    type: ethernet
+    ip:
+      address: 
+      - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+      gateway4: "{{ eth0_ipv4_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      - "{{ dns2 }}"
+      dns_search: 
+      - iad2.fedoraproject.org
+      - fedoraproject.org
+      dhcp4: no
+      auto6: no
+
+  - name: eth1
+    mac: "{{ mac1 }}"
+    state: down
+    type: ethernet
+    autoconnect: yes
+ 
+  - name: eth2
+    mac: "{{ mac2 }}"
+    state: down
+    type: ethernet
+    
+  - name: eth3
+    mac: "{{ mac3 }}"
+    state: down
+    type: ethernet
