--- a/inventory/host_vars/buildvm-a32-02.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-a32-02.iad2.fedoraproject.org
@@ -1,3 +1,32 @@
 ---
 vmhost: bvmhost-a64-01.iad2.fedoraproject.org
-eth0_ip: 10.3.170.62
+datacenter: iad2
+dns1: 10.3.163.33
+dns2: 10.3.163.34
+ 
+has_ipv4: yes
+eth0_ipv4: 10.3.170.62
+eth0_ipv4_nm: 24
+eth0_ipv4_gw: 10.3.170.254
+
+has_ipv6: no
+ 
+mac0: 52:54:00:ac:8e:53
+
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    state: down
+    type: ethernet
+    ip:
+      address: 
+      - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+      gateway4: "{{ eth0_ipv4_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      - "{{ dns2 }}"
+      dns_search: 
+      - iad2.fedoraproject.org
+      - fedoraproject.org
+      dhcp4: no
+      auto6: no
