fixed wrong state for eth0 (up instead of down)

--- a/inventory/host_vars/buildhw-a64-05.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-a64-05.iad2.fedoraproject.org
@@ -18,7 +18,7 @@ mac3: ca:65:7a:c4:c8:83
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
