--- a/inventory/host_vars/buildhw-a64-06.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-a64-06.iad2.fedoraproject.org
@@ -18,7 +18,7 @@ mac3: 66:66:16:e5:59:df
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
