--- a/inventory/host_vars/buildhw-a64-19.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-a64-19.iad2.fedoraproject.org
@@ -18,7 +18,7 @@ mac3: f4:e9:d4:f2:e7:f5
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
