--- a/inventory/host_vars/buildvm-a32-01.stg.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-a32-01.stg.iad2.fedoraproject.org
@@ -17,7 +17,7 @@ mac0: 52:54:00:d7:04:aa
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
