--- a/inventory/host_vars/buildvm-a64-17.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-a64-17.iad2.fedoraproject.org
@@ -16,7 +16,7 @@ mac0: 52:54:00:26:84:9e
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
