--- a/inventory/host_vars/buildhw-a64-03.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-a64-03.iad2.fedoraproject.org
@@ -18,7 +18,7 @@ mac3: d2:87:2a:46:d0:24
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
