--- a/inventory/host_vars/buildhw-a64-04.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-a64-04.iad2.fedoraproject.org
@@ -18,7 +18,7 @@ mac3: c2:ac:ba:0d:8c:db
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
