--- a/inventory/host_vars/buildhw-a64-11.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-a64-11.iad2.fedoraproject.org
@@ -18,7 +18,7 @@ mac3: ee:ef:b7:b9:28:8a
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
