--- a/inventory/host_vars/buildhw-x86-03.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-03.iad2.fedoraproject.org
@@ -16,7 +16,7 @@ mac1: 14:9e:cf:61:9e:cc
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
