--- a/inventory/host_vars/buildhw-x86-06.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-06.iad2.fedoraproject.org
@@ -17,7 +17,7 @@ mac1: 14:9e:cf:61:a0:c0
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
