--- a/inventory/host_vars/buildhw-x86-12.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-12.iad2.fedoraproject.org
@@ -16,7 +16,7 @@ mac1: f8:ca:b8:f7:2e:f8
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
