--- a/inventory/host_vars/buildvm-a32-32.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-a32-32.iad2.fedoraproject.org
@@ -16,7 +16,7 @@ mac0: 52:54:00:48:3e:a3
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: down
+    state: up
     type: ethernet
     ip:
       address: 
