os-cluster: baseiptables should be FALSE
The baseiptables variable controls if the base role should apply base
iptables and ip6tables templates to a host. In the case of OpenShift we
DO NOT WANT it to do this. The base iptables template doesn't handle all
the container native rules and setup that OpenShift needs to work.
This has caused multiple outages by applying this template on the
OpenShift nodes. So, set it to false here and keep it false please. :)

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/os-master01.iad2.fedoraproject.org
+++ b/inventory/host_vars/os-master01.iad2.fedoraproject.org
@@ -11,7 +11,7 @@ eth0_ip: 10.3.163.66
 vmhost: vmhost-x86-02.iad2.fedoraproject.org
 datacenter: iad2
 
-baseiptables: true
+baseiptables: false
 vpn: false
 
 nrpe_procs_warn: 900
