--- a/inventory/host_vars/os-master02.iad2.fedoraproject.org
+++ b/inventory/host_vars/os-master02.iad2.fedoraproject.org
@@ -11,7 +11,7 @@ eth0_ip: 10.3.163.67
 vmhost: vmhost-x86-03.iad2.fedoraproject.org
 datacenter: iad2
 
-baseiptables: true
+baseiptables: false
 vpn: false
 
 nrpe_procs_warn: 900
