--- a/inventory/host_vars/os-node05.iad2.fedoraproject.org
+++ b/inventory/host_vars/os-node05.iad2.fedoraproject.org
@@ -11,7 +11,7 @@ eth0_ip: 10.3.163.73
 vmhost: vmhost-x86-02.iad2.fedoraproject.org
 datacenter: iad2
 
-baseiptables: true
+baseiptables: false
 vpn: false
 
 mem_size: 24576
